--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,13 +2,14 @@ name: text_recognition
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=3.0.0-290.3.beta <4.0.0'
+environment:
+  sdk: '>=2.19.6 <4.0.0'
 
 dependencies: 
   cupertino_icons: ^1.0.2
-# google_mlkit_text_recognition: ^0.6.0
-  google_ml_kit: ^0.14.0
+  google_mlkit_text_recognition: ^0.6.0
+  google_mlkit_language_id: ^0.6.0
+  google_mlkit_translation: ^0.6.0
   image_picker: ^0.8.7+4
   image_cropper: ^3.0.3
   get: 4.6.5
