--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,17 +3,18 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: '>=2.19.6 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies: 
   cupertino_icons: ^1.0.2
-  google_mlkit_text_recognition: ^0.6.0
-  google_mlkit_language_id: ^0.6.0
-  google_mlkit_translation: ^0.6.0
-  image_picker: ^0.8.7+4
-  image_cropper: ^3.0.3
-  get: 4.6.5
-  flutter_svg: ^2.0.5
+  google_mlkit_text_recognition: ^0.10.0
+  google_mlkit_language_id: ^0.8.0
+  google_mlkit_translation: ^0.8.0
+  image_picker: ^1.0.2
+  image_cropper: ^5.0.0
+  get: ^4.6.5
+  flutter_tts: ^3.7.0
+  flutter_svg: ^2.0.7
   dotted_border: ^2.0.0+3
   flutter: 
     sdk: flutter
