--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_tts: ^3.7.0
   flutter_svg: ^2.0.7
   dotted_border: ^2.0.0+3
+  share_plus: ^7.1.0
   flutter: 
     sdk: flutter
 
